--- a/src/component/packages/CardP.css
+++ b/src/component/packages/CardP.css
@@ -110,9 +110,9 @@
 
   
 }
-.imgcard1{
+.imgcard11{
   position: flex;
-  height: 300px;
+  height: 500px;
   border-radius: 20px 20px ;
 }
 
@@ -123,10 +123,10 @@
  border: none;
  box-shadow: 5px 5px 15px #9E9E9E;
 }
-.card-body {
+.card1-body {
   flex: 1 1 auto;
   padding: 1rem 1rem;
-  height: 300px;
+  height: 400px;
   overflow: hidden;
 }
 .btnns{
